<resources>
    <string name="app_name">Guess</string>
    <string name="acerca_de">Acerca De</string>
    <string name="apple">APPLE</string>
    <string name="elis">ELIS</string>
    <string name="river_plate">River Plate</string>
    <string name="salah">SALAH</string>
    <string name="real_madrid">REAL MADRID</string>
    <string name="todo5">TODO</string>
    <string name="todo1">TODO</string>
    <string name="todo2">TODO</string>
    <string name="todo3">TODO</string>
    <string name="todo4">TODO</string>
    <string name="vidas"></string>
    <string name="_0"></string>
    <string name="puntaje_0"></string>
    <string name="ingrese_su_respuesta">Ingrese su respuesta</string>
    <string name="confirmar">CONFIRMAR</string>
    <string name="jugar">JUGAR</string>
    <string name="respuestas">RESPUESTAS</string>
    <string name="guess">GUESS</string>
    <string name="acerca_de1">ACERCA DE</string>
    <string name="copyright_guess_2018">Copyright Guess 2018</string>
    <string name="vuelve_a_intentarlo">VUELVE A INTENTARLO</string>
    <string name="todo">TODO</string>
</resources>
