<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Personajes">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/txtVidasPersonajes"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/vidas"
                    android:textAlignment="textStart"
                    android:textSize="24sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/txtConteoPersonajes"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/_0"
                    android:textAlignment="center"
                    android:textSize="24sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/txtPuntajePersonajes"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/puntaje_0"
                    android:textAlignment="textEnd"
                    android:textSize="24sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <ImageView
                android:id="@+id/imagenPersonajes"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="20"
                android:contentDescription="@string/todo"
                app:srcCompat="@mipmap/loki" />

            <EditText
                android:id="@+id/respuestaPersonajes"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:hint="@string/ingrese_su_respuesta"
                android:inputType="textNoSuggestions" />

            <Button
                android:id="@+id/btnConfirmarPersonajes"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/confirmar" />
        </LinearLayout>
    </ScrollView>

</android.support.constraint.ConstraintLayout>