<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/logoazul"
    tools:context=".Lugares">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    </ScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/txtVidasLugares"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/vidas"
                android:textAlignment="textStart"
                android:textColor="@color/color2"
                android:textSize="24sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txtConteoLugares"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/_0"
                android:textAlignment="center"
                android:textColor="@color/color2"
                android:textSize="24sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txtPuntajeLugares"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/puntaje_0"
                android:textAlignment="textEnd"
                android:textColor="@color/color2"
                android:textSize="24sp"
                android:textStyle="bold" />
        </LinearLayout>

        <ImageView
            android:id="@+id/imagenLugares"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="20"
            android:contentDescription="@string/todo"
            app:srcCompat="@mipmap/grecia" />

        <EditText
            android:id="@+id/respuestaLugares"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/ingrese_su_respuesta"
            android:inputType="textNoSuggestions"
            android:textColor="@android:color/white" />

        <Button
            android:id="@+id/btnConfirmarLugares"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/confirmar"
            android:textColor="@color/color2" />
    </LinearLayout>
</android.support.constraint.ConstraintLayout>