<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/logoazul"
    tools:context=".Marcas">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/txtVidasMarcas"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/vidas"
                    android:textAlignment="textStart"
                    android:textColor="@color/color2"
                    android:textSize="24sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/txtConteoMarcas"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/_0"
                    android:textAlignment="center"
                    android:textColor="@color/color2"
                    android:textSize="24sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/txtPuntajeMarcas"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/puntaje_0"
                    android:textAlignment="textEnd"
                    android:textColor="@color/color2"
                    android:textSize="24sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <ImageView
                android:id="@+id/imagenMarcas"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="20"
                android:contentDescription="@string/todo"
                app:srcCompat="@mipmap/android" />

            <EditText
                android:id="@+id/respuestaMarcas"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:hint="@string/ingrese_su_respuesta"
                android:inputType="textNoSuggestions"
                android:textColor="@android:color/white"
                android:textSize="18sp" />

            <Button
                android:id="@+id/btnConfirmarMarcas"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/confirmar"
                android:textColor="@color/color2" />
        </LinearLayout>
    </ScrollView>

</android.support.constraint.ConstraintLayout>